# Gold-Miner

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.txt  desktop.ini  install  run
SFML-2.5.1-x64/include/SFML/Audio/: SoundSource.hpp
SFML-2.5.1-x64/include/SFML/Network/: UdpSocket.hpp
SFML-2.5.1-x64/include/SFML/System/: Time.hpp
SFML-2.5.1/lib/cmake/SFML/: SFMLSharedTargets-release.cmake  SFMLSharedTargets.cmake
SFML-2.5.1/share/SFML/doc/html/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  Clipboard_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  Cursor_8hpp_source.html  Drawable_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  Glsl_8hpp_source.html  Glyph_8hpp_source.html  GpuPreference_8hpp.html  GpuPreference_8hpp_source.html  Graphics_2Export_8hpp_source.html  Graphics_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  Main_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  (+372 more)
include/: Animations.h  App.h  Block.h  Collision.h  Config.h  Directions.h  GameObjectFactory.h  IGameObject.h  Input.h  Inventory.h  InventoryWindow.h  Map.h  Player.h  Player.hpp  TextureHolder.h  Textures.h  Utils.h
src/: .CMakeLists.txt.swp  .editorconfig  Animations.cpp  Block.cpp  CMakeLists.txt  Config.cpp  GameObjectFactory.cpp  Input.cpp  Inventory.cpp  InventoryWindow.cpp  Map.cpp  Player.cpp  TextureHolder.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt  catch_main.cpp  test_file.cpp
